# py-holidays-rs

./: .gitignore  Cargo.toml  README.md  build.rs  gen_objects.py  minify_and_gzip.py
.github/workflows/: generate-holidays.yml
examples/: get_online.rs
files/: AD.json  AE.json  AL.json  AM.json  AO.json  AR.json  AS.json  AT.json  AU.json  AW.json  AZ.json  BA.json  BB.json  BD.json  BE.json  BF.json  BG.json  BH.json  BI.json  BN.json  BO.json  BR.json  BS.json  BW.json  BY.json  BZ.json  CA.json  CH.json  CL.json  CM.json  CN.json  CO.json  CR.json  CU.json  CW.json  CY.json  CZ.json  DE.json  DJ.json  DK.json  (+101 more)
src/: lib.rs  types.rs  wasm32.rs  x86_64.rs
