[package]
name = "py-holidays-rs"
version = "0.0.13"
edition = "2021"
authors = ["Billy Sheppard"]
license = "Apache-2.0"
keywords = ["holidays", "vacation", "dates"]
readme = "README.md"
description = "Public Holiday crate based on the python Holidays package"
repository = "https://github.com/Billy-Sheppard/py-holidays-rs"
homepage = "https://github.com/Billy-Sheppard/py-holidays-rs"
exclude = [
    "all_holidays.json",
    "files/*"
]

[dependencies]
serde_json = { features = ["std"], version = "1.0.142", default-features = false }
serde = { features = ["derive", "std"], version = "1.0.219", default-features = false }
chrono = { features = ["serde", "std"], version = "0.4.41", default-features = false }  
ureq = { features = ["gzip", "rustls"], version = "3.1.0", default-features = false }
flate2 = { features = ["rust_backend"], version = "1.1.1" , default-features = false}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docs_rs)'] }
