[package]
name = "py-holidays-rs"
version = "0.1.0"
edition = "2024"
authors = ["Billy Sheppard"]
license = "Apache-2.0"
keywords = ["holidays", "vacation", "dates"]
readme = "README.md"
description = "Public Holiday crate based on the python Holidays package"
repository = "https://github.com/Billy-Sheppard/py-holidays-rs"
homepage = "https://github.com/Billy-Sheppard/py-holidays-rs"
exclude = [
    "all_holidays.json.gz",
    "files/*"
]

[dependencies]
serde_json = { features = ["std"], version = "1.0.142", default-features = false, optional = false }
serde = { features = ["derive", "std"], version = "1.0.219", default-features = false, optional = false }
chrono = { features = ["serde", "std"], version = "0.4.41", default-features = false, optional = false }  
flate2 = { features = ["rust_backend"], version = "1.1.1" , default-features = false, optional = false }
rust-embed = { version = "8.7.2", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { features = ["gzip", "rustls"], version = "3.1.0", default-features = false, optional = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
once_cell = { features = ["std"], version = "1.21.3", default-features = false, optional = false }
reqwasm = { version = "0.5.0", default-features = false, optional = false }
wasm-bindgen = { version = "0.2.100", default-features = false, optional = false }
wasm-bindgen-futures = { version = "0.4.30", default-features = false, optional = false }
 
[features]
default = []
offline = ["rust-embed"]