[package]
name = "py-holidays-rs"
version = "0.1.2"
edition = "2024"
authors = ["Billy Sheppard"]
license = "Apache-2.0"
keywords = ["holidays", "vacation", "dates"]
readme = "README.md"
description = "Public Holiday crate based on the python Holidays package"
repository = "https://github.com/Billy-Sheppard/py-holidays-rs"
homepage = "https://github.com/Billy-Sheppard/py-holidays-rs"

[dependencies]
serde_json = { features = ["std"], version = "1.0.143", default-features = false, optional = false }
serde = { features = ["derive", "std"], version = "1.0.219", default-features = false, optional = false }
chrono = { features = ["serde", "std"], version = "0.4.41", default-features = false, optional = false }  
flate2 = { features = ["rust_backend"], version = "1.1.1" , default-features = false, optional = false }
rust-embed = { version = "8.7.2", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies] 
hyper = { version = "1.7.0", features = ["client", "http1", "http2"], optional = true }
hyper-util = { version = "0.1.16", features = ["client", "client-legacy", "http1", "http2", "tokio"], optional = true }
hyper-tls = { version = "0.6.0", optional = true }
http-body-util = { version = "0.1.3", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
once_cell = { features = ["std"], version = "1.21.3", default-features = false, optional = false }
reqwasm = { version = "0.5.0", default-features = false, optional = false }
wasm-bindgen = { version = "0.2.100", default-features = false, optional = false }
wasm-bindgen-futures = { version = "0.4.30", default-features = false, optional = false }
 
[features]
default = [ "hyper", "hyper-util", "hyper-tls", "http-body-util", "tokio" ]
offline = [ "rust-embed" ]